--- a/DEW/UT04-01/index.html
+++ b/DEW/UT04-01/index.html
@@ -4,38 +4,136 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <h1>Cambios en el teclado</h1>
+    <h1>Formulario</h1>
     <hr>
-<form action="https://www.w3schools.com/action_page.php" method="post">
-    <label for="phone">Teclado para teléfono</label>
-    <input type="tel" name="phone" id="phone">
+   
+    <form action="https://www.w3schools.com/action_page.php" method="post">
+       <fieldset>
+        <legend>Datos usuario</legend>
+            <table>
+                <tr>
+                    <td><label for="user">Nombre de usuario</label></td>
+                    <td><label for="password">Contraseña</label></td>
+                </tr>
+                <tr>
+                    <td><input type="text" name="user" id="user" required></td>
+                    <td><input type="password" name="password" id="password" required></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input type="checkbox" name="showpass" id="showpass">
+                        <label for="showpass">Mostrar contraseña</label>
+                    </td>
+                </tr>
+            </table>        
+       </fieldset>
 
-    <br>
-    <label for="email">Teclado email</label>
-    <input type="email" name="email" id="email">
 
-    <br>
-    <label for="number">Para números</label>
-    <input type="number" name="number" id="number">
 
-    <br>
-    <label for="password">Para contraseña</label>
-    <input type="password" name="password" id="password">
 
-    <br>
-    <label for="url">Para url</label>
-    <input type="url" name="url" id="url">
+       <fieldset>
+        <legend>Datos personales</legend>
+            <table>
+                <tr>
+                    <td><label for="name">Nombre</label></td>
+                    <td><label for="lastname">Apellidos</label></td>
+                </tr>
+                <tr>
+                    <td><input type="text" name="name" id="name" placeholder="Nombre" required></td>
+                    <td><input type="text" name="lastname" id="lastname" placeholder="Apellidos" required></td>
+                </tr>
+                <tr>
+                    <td><label for="phone">Teléfono</label></td>
+                    <td><label for="number">Código Postal</label></td>
+                </tr>
+                <tr>
+                    <td><input type="tel" name="phone" id="phone" placeholder="(+34)922123123" required></td>
+                    <td> <input type="number" name="number" id="number" placeholder="38XXX" required></td>
+                </tr>
 
-    <br>
-    <label for="search">Buscar</label>
-    <input type="search" name="search" id="search">
 
-    <br>
+                <tr>
+                    <td><label for="dni">DNI/NIE</label></td>
+                    <td>
+                        <p>Crear cuenta como:</p>
+                    </td>
+                    <td><label for="nacimiento">Año de nacimiento</label></td>
+                </tr>
+                <tr>
+                    <td>
+                        <select name="document_type" id="document_type" >
+                            <option disabled selected > --- </option>
+                            <option value="dni">DNI</option>
+                            <option value="nie">NIE</option>
+                        </select>
+                        <span id="error-id"></span>
+                        <input type="text" name="document_number" id="document_number" placeholder="DNI / NIE" required>
+                    </td>
+                    <td>
+                        <input type="radio" name="cuenta" id="cuenta_particular" value="particular" required>
+                        <label for="cuenta_particular">Particular</label>
+                        <input type="radio" name="cuenta" id="cuenta_empresa" value="empresa" required>
+                        <label for="cuenta_empresa">Empresa</label>
+                    </td>
+                    <td><input type="number" min="1900" max="2024" placeholder="2010" required></td>
+                </tr>
+            </table>
 
-    <input type="submit" value="Enviar a w3school">
-</form>
+
+
+
+            <p>Elige tus aficiones:</p>
+            <span class="error-message"></span>
+
+            <input type="checkbox" name="musica" id="music" value="on" >
+            <label for="music">Música</label>
+
+            <input type="checkbox" name="deporte" id="deporte" value="on">
+            <label for="deporte">Deporte</label>
+
+            <input type="checkbox" name="videojuegos" id="games" value="on">
+            <label for="games">Video juegos</label>
+
+            <input type="checkbox" name="manualidades" id="diy" value="on">
+            <label for="diy">Manualidades</label>
+
+            <input type="checkbox" name="artes" id="art" value="on">
+            <label for="art">Artes</label>
+
+            <input type="checkbox" name="lectura" id="book" value="on">
+            <label for="book">Lectura</label>
+
+
+
+
+        </fieldset>
+
+
+
+
+        <fieldset class="review">
+            <legend>Datos Publicación</legend>
+            <label for="title">Título</label>
+            <input name="title" type="text" id="title" maxlength="15" required>
+            <span id="letras-titulo"></span>
+
+
+
+
+            <label for="description">Descripción</label>
+            <textarea name="description" id="description" maxlength="120" required></textarea>
+            <span id="letras-descripcion"></span>
+        </fieldset>
+
+
+
+
+        <input id="enviar" type="submit" value="Enviar a w3school">
+    </form>
+
+    <script src="script.js"></script>
 </body>
 </html>
