--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </div>
         <div class="aside-opciones">
             <ul>
-                <li><a href="../Marg0ti.github.io/DEW/UT04-01/index.html">Tarea 1</a></li>
-                <li><a href="../Marg0ti.github.io/DEW/UT04-02/index.html">Tarea 2</a></li>
+                <li><a href="./DEW/UT04-01/index.html">Tarea 1</a></li>
+                <li><a href="./DEW/UT04-02/index.html">Tarea 2</a></li>
 
             </ul>
         </div>
