--- a/DEW/UT04-02/index.html
+++ b/DEW/UT04-02/index.html
@@ -147,6 +147,6 @@
     <div id="form-validations">
     </div>
 
-    <script src="script.js"></script>
+    <script type="module"  src="script.js"></script>
 </body>
 </html>
